--- a/assets/_scss/components/_footer.scss
+++ b/assets/_scss/components/_footer.scss
@@ -215,7 +215,7 @@ li.usa-footer-primary-content {
     }    
 
     .usa-footer-primary-link {
-      background: url('/assets/img/arrow-down.png') no-repeat;
+      background: url('../img/arrow-down.png') no-repeat;
       background-position: 1.5rem;
       padding-left: 3.5rem;
 
@@ -232,7 +232,7 @@ li.usa-footer-primary-content {
 
       .usa-footer-primary-link { 
         margin: 0; 
-        background: url('/assets/img/arrow-right.png') no-repeat;
+        background: url('../img/arrow-right.png') no-repeat;
         background-position: 1.5rem;
         cursor: pointer;
 
